--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             </a>
           </li>
           <li class="nav-item active mr-3 mt-1  ml-3">
-            <a class="nav-link" href="https://www.linkedin.com/in/yigitmustu/">
-              <img class="rounded-circle" style="width: 25px;height: 25px;" src="assets/profile.jfif" alt="">
+            <a class="nav-link" href="#">
+              <img class="rounded-circle" style="width: 25px;height: 25px;" src="https://picsum.photos/id/12/200/300" alt="">
                 <div class="menutext mt-0"><strong>Me</strong></div>
             </a>
           </li>
@@ -144,7 +144,7 @@
               "
             >
               <img
-                src="assets/profile.jfif"
+                src="https://picsum.photos/id/12/200/300"
                 class=""
                 style="
                   width: 70px;
@@ -159,7 +159,7 @@
             </div>
             <div class="card-body">
               <p class="card-title header text-center mt-4">
-                <a href="https://www.linkedin.com/in/yigitmustu/" target="_blank" style="color: #212529;">İdris Yiğit Muştu</a>
+                <a href="#" target="_blank" style="color: #212529;">Name</a>
               </p>
               <div
                 
@@ -812,7 +812,7 @@
     >
       <a class="navbar-brand" href="#"
         ><img
-          src="assets/profile.jfif"
+          src="https://picsum.photos/id/23/200/300"
           style="width: 30px; height: 30px; border-radius: 50%;"
       /></a>
       <span style="font-size: 14px;font-family:Arial, Helvetica, sans-serif;"><strong>Messaging</strong></span>
